# php-scrypt

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  composer.json  docker-compose.yml  phpunit.xml  rustfmt.toml
.github/workflows/: tests.yml
src/: lib.rs
tests/: ScryptTest.php
