[package]
name = "scrypt-php"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ext-php-rs = "0.7.4"
scrypt = { version = "0.10.0", features = ["simple"] }
hex = "0.4.3"
fast-math = "0.1.1"

[lib]
crate-type = ["cdylib"]
